--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" ><!--wrote this so my page can adapt to any device-->
        <title>My First Website</title>
        <link rel="icon" href="images/html-icon.webp" type="image/x-icon"><!--wrote this to make a icon-->
-       <!--just a little css to make the color of webpage dark, its comfortable that way-->
       <link rel="stylesheet" href="styles/main.css">
+      <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>My first try to make a Website</h1>
@@ -65,7 +65,7 @@
         <br>
         <div style="background-color: darkslategrey;">
         <p> <span style="color: green;">So this supposed to be a first paragraph.</span>  I am learning <abbr title="HyperText Markup Language">HTML</abbr> I can change text to <strong>strong</strong>, <b>bold</b>, <i>italic</i> and also <em>emphasize it</em> or make it <small>small</small>. <sub>Subscript</sub> and <sup>Superscript</sup> are also not a problem.
-            <br> Want to make a text <ins>inserted</ins>, <mark>marked</mark> or even <del>delete</del> cross it? I GOT YOU.</p><!--wrote this to show different fonts-->
+            <br> Want to make a text <ins>inserted</ins>, <mark>marked</mark> or even <del>delete</del> cross it. All of this is possible usung css but at the moment i dont know how, once i start learning it i will make the text green.</p><!--wrote this to show different fonts-->
            
             <br> 
             <p>Next paragraph is going to be a long sample text which i typed using ''lorem''</p>
