--- a/pizza.html
+++ b/pizza.html
@@ -8,6 +8,7 @@
     <title>Pizza Page</title>
     <link rel="icon" href="images/html-icon.webp" type="image/x-icon">
    <link rel="stylesheet" href="styles/main.css">
+   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>This page is dedicated to Pizza</h1>
